# averra-widgets

./: .gitignore  AverraWidgets.pri  AverraWidgets.pro  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
cmake/: AverraWidgetsConfig.cmake.in
docs/: RELEASE.md  ROADMAP.md  SCENARIO_GUIDE.md  style-profile.example.json
examples/gallery/: AverraGallery.pro  CMakeLists.txt  GalleryWindow.cpp  GalleryWindow.h  main.cpp
include/Averra/: AverraBadgeButton.h  AverraButton.h  AverraCard.h  AverraCheckBox.h  AverraComboBox.h  AverraContextMenu.h  AverraDataTable.h  AverraDateEdit.h  AverraDialog.h  AverraDialogManager.h  AverraDivider.h  AverraDock.h  AverraDrawer.h  AverraEmptyState.h  AverraFieldDefinition.h  AverraFilterChipGroup.h  AverraFormModel.h  AverraFormSection.h  AverraGlobal.h  AverraIcon.h  AverraInfoBar.h  AverraInspectorPanel.h  AverraLineEdit.h  AverraLoadingRing.h  AverraNavigationPanel.h  AverraNumberBox.h  AverraNumberRangeBox.h  AverraPagination.h  AverraProgressBar.h  AverraPropertyEditor.h  AverraPropertyGrid.h  AverraPropertyItem.h  AverraRadioButton.h  AverraRibbonBar.h  AverraSearchBar.h  AverraSectionHeader.h  AverraSegmentedControl.h  AverraSettingsPage.h  AverraSkeleton.h  AverraSlider.h  (+15 more)
resources/: averra_resources.qrc
scripts/: package_release.sh  prepare_release_record.sh  verify_release_consumers.sh
src/: AverraWidgets.pro  CMakeLists.txt
src/core/: AverraFieldDefinition.cpp  AverraFormModel.cpp  AverraIcon.cpp  AverraStyleHelper.cpp  AverraStyleHelper.h  AverraStyleProfile.cpp  AverraTheme.cpp  AverraThemeManager.cpp  AverraValidationResult.cpp
src/widgets/: AverraBadgeButton.cpp  AverraButton.cpp  AverraCard.cpp  AverraCheckBox.cpp  AverraComboBox.cpp  AverraContextMenu.cpp  AverraDataTable.cpp  AverraDateEdit.cpp  AverraDialog.cpp  AverraDialogManager.cpp  AverraDivider.cpp  AverraDock.cpp  AverraDrawer.cpp  AverraEmptyState.cpp  AverraFilterChipGroup.cpp  AverraFormSection.cpp  AverraInfoBar.cpp  AverraInspectorPanel.cpp  AverraLineEdit.cpp  AverraLoadingRing.cpp  AverraNavigationPanel.cpp  AverraNumberBox.cpp  AverraNumberRangeBox.cpp  AverraPagination.cpp  AverraProgressBar.cpp  AverraPropertyEditor.cpp  AverraPropertyGrid.cpp  AverraPropertyItem.cpp  AverraRadioButton.cpp  AverraRibbonBar.cpp  AverraSearchBar.cpp  AverraSectionHeader.cpp  AverraSegmentedControl.cpp  AverraSettingsPage.cpp  AverraSkeleton.cpp  AverraSlider.cpp  AverraStatisticCard.cpp  AverraSwitch.cpp  AverraTabs.cpp  AverraTag.cpp  (+6 more)
tests/: CMakeLists.txt
tests/widgets/: AverraWidgetsTests.pro  CMakeLists.txt  target_wrapper.sh  test_main.cpp  tst_AverraBadgeButton.cpp  tst_AverraButton.cpp  tst_AverraCard.cpp  tst_AverraCheckBox.cpp  tst_AverraComboBox.cpp  tst_AverraContextMenu.cpp  tst_AverraDataTable.cpp  tst_AverraDateEdit.cpp  tst_AverraDialog.cpp  tst_AverraDialogManager.cpp  tst_AverraDivider.cpp  tst_AverraDock.cpp  tst_AverraDrawer.cpp  tst_AverraEmptyState.cpp  tst_AverraFilterChipGroup.cpp  tst_AverraFormModel.cpp  tst_AverraFormSection.cpp  tst_AverraInfoBar.cpp  tst_AverraInspectorPanel.cpp  tst_AverraLineEdit.cpp  tst_AverraLoadingRing.cpp  tst_AverraNavigationPanel.cpp  tst_AverraNumberBox.cpp  tst_AverraNumberRangeBox.cpp  tst_AverraPagination.cpp  tst_AverraProgressBar.cpp  tst_AverraPropertyEditor.cpp  tst_AverraPropertyGrid.cpp  tst_AverraPropertyItem.cpp  tst_AverraRadioButton.cpp  tst_AverraRibbonBar.cpp  tst_AverraSearchBar.cpp  tst_AverraSectionHeader.cpp  tst_AverraSegmentedControl.cpp  tst_AverraSettingsPage.cpp  tst_AverraSkeleton.cpp  (+14 more)
